--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p class="text-faded">I am studying Computer Science third year in BVB College of Engineering and Technology,Hubli..I am currently working on two projects Smart Trash Can which is an project based on IOT and mainly concerates on concept of Smart City and a website for a tattoo studio as my business project.<br>
 I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My goal is to find a position with an institution that will utilize my skills and dedicated work ethic.
 </p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <a href="#skills" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
         </div>
