--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                
 
                 <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>948-092-1703</p>
+                    <i class="fa fa-mobile fa-3x wow bounceIn"></i>
+                    <p>+91-948-092-1703</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>Rishabh Mehta-rishabh2605@gmail.com</a></p>
+                    <p>rishabh2605@gmail.com</a></p>
                 </div>
             </div>
         </div>
