--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                 </div>
                                 <div class="project-name">
                                     Control of Fan by Light Intensity
+                                    Uses LDR as a switch to on/off
                                 </div>
                             </div>
                         </div>
@@ -168,6 +169,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                 </div>
                                 <div class="project-name">
                                     Single Axis Solar Tracker
+                                    Rotates solar panel according to movement of sun for efficient use of solar energy
                                 </div>
                             </div>
                         </div>
@@ -183,6 +185,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                 </div>
                                 <div class="project-name">
                                     Student Planner
+                                    Helps student to maintain his claendar,notes and timetable
                                 </div>
                             </div>
                         </div>
@@ -197,7 +200,8 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                     IoT
                                 </div>
                                 <div class="project-name">
-                                    Smart Trash Can
+                                    Smart Trash Can 
+                                    User gets notification when bin is full and project also shows optimal route for collection
                                 </div>
                             </div>
                         </div>
@@ -212,7 +216,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                     Web Technology
                                 </div>
                                 <div class="project-name">
-                                    NeedleNSkin Tattoo studio
+                                    NeedleNSkin Tattoo studio<br>needlenskin.com
                                 </div>
                             </div>
                         </div>
@@ -224,10 +228,10 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Web Technology
+                                    Coming Soon
                                 </div>
                                 <div class="project-name">
-                                    Automobile department Website
+                                    
                                 </div>
                             </div>
                         </div>
