--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                     Digital Electronics
                                 </div>
                                 <div class="project-name">
-                                    Control of Fan by Light Intensity
+                                    Control of Fan by Light Intensity<br>
                                     Uses LDR as a switch to on/off
                                 </div>
                             </div>
@@ -168,7 +168,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                     Microcontroller
                                 </div>
                                 <div class="project-name">
-                                    Single Axis Solar Tracker
+                                    Single Axis Solar Tracker<br>
                                     Rotates solar panel according to movement of sun for efficient use of solar energy
                                 </div>
                             </div>
@@ -184,7 +184,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                     Java
                                 </div>
                                 <div class="project-name">
-                                    Student Planner
+                                    Student Planner<br>
                                     Helps student to maintain his claendar,notes and timetable
                                 </div>
                             </div>
@@ -200,7 +200,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                     IoT
                                 </div>
                                 <div class="project-name">
-                                    Smart Trash Can 
+                                    Smart Trash Can<br> 
                                     User gets notification when bin is full and project also shows optimal route for collection
                                 </div>
                             </div>
