--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                 </div>
                                 <div class="project-name">
                                     Smart Trash Can<br> 
-                                    User gets notification when bin is full and project also shows optimal route for collection
+                                    User gets notification when bin is full and project also shows optimal route for collection.
                                 </div>
                             </div>
                         </div>
