--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                     Java-Student Planner
                                 </div>
                                 <div class="project-name">
-                                    Student Planner
-                                    Helps student to maintain his claendar,notes and timetable
+                                   
+                                   This hselps student to maintain his calendar,notes and timetable
                                 </div>
                             </div>
                         </div>
