--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                                 </div>
                                 <div class="project-name">
                                    
-                                   This hselps student to maintain his calendar,notes and timetable
+                                   This helps student to maintain his calendar,notes and timetable
                                 </div>
                             </div>
                         </div>
