--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p><a class="typeform-share button" href="https://rishabh62.typeform.com/to/CaPDgH" data-mode="2" target="_blank">Contact Me</a>
+                    <a class="typeform-share button" href="https://rishabh62.typeform.com/to/CaPDgH" data-mode="2" target="_blank">Contact Me</a>
 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
-</p>
+
                 </div>
                 
                
