--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@ I will obtain my Bachelor's Degree in Computer Science by the end of 2017 .My go
 <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"><a href="https://www.typeform.com/examples/forms/?utm_campaign=CaPDgH&amp;utm_source=typeform.com-3995889-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-onlineform&amp;utm_term=EN" style="color: #999" target="_blank">Online form</a> powered by Typeform</div>
 <!-- Change the width and height values to suit you best -->
                     <!-- Change the width and height values to suit you best -->
-<div class="typeform-widget" data-url="https://rishabh62.typeform.com/to/ULwg2p" data-text="Delivery Order Form" style="width:100%;height:500px;"></div>
+<!--<div class="typeform-widget" data-url="https://rishabh62.typeform.com/to/ULwg2p" data-text="Delivery Order Form" style="width:100%;height:500px;"></div>
 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by<a href="https://www.typeform.com/examples/order-forms/?utm_campaign=ULwg2p&amp;utm_source=typeform.com-3995889-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-orderform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a></div>
+<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by<a href="https://www.typeform.com/examples/order-forms/?utm_campaign=ULwg2p&amp;utm_source=typeform.com-3995889-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-orderform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a></div>-->
                    
                 </div>
                 
